--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <header>
+        <h1>EduXplore</h1>
+    </header>
     <div class="container">
         <nav class="sidebar">
             <h2>Asignaturas</h2>
@@ -38,7 +40,7 @@
                     </div>
                     <div class="tool">
                         <h3>Videos Tutoriales</h3>
-                        <a href="https://www.youtube.com/playlist?list=PL2EB4B452F37D4E4F" target="_blank">Ver Videos</a>
+                        <a href="https://youtu.be/gWuuK12F_lY" target="_blank">Ver Videos</a>
                     </div>
                     <div class="tool">
                         <h3>PDFs</h3>
@@ -203,5 +205,8 @@
             </section>
         </main>
     </div>
+    <footer>
+        <span>Derechos reservados ©</span>
+    </footer>
 </body>
 </html>
